# cu-smallpt

./: CMakeLists.txt
src/: CMakeLists.txt  imageio.hpp  kernel.cu
src/common/: geometry.hpp  imageio.hpp  math.hpp  platform.hpp  sampling.hpp  sphere.hpp  vector.hpp
src/cpp/seq/: CMakeLists.txt  kernel.cpp  rng.hpp  specular.hpp
src/cuda/: CMakeLists.txt  cuda_tools.hpp  kernel.cu  rng.cuh  specular.cuh
